Fixed view on iOS

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,16 +9,3 @@
     overflow: auto;
   }
 }
-
-// iOS devices only
-@supports (-webkit-touch-callout: none) {
-  .App {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .content {
-      width: 100%;
-      max-width: 800px;
-    }
-  }
-}
